--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -19,7 +20,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "prisma": "^7.3.0",
     "radix-ui": "^1.4.3",
