--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dotenv": "^17.2.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.4",
-    "next-auth": "^4.24.13",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
